setup rbac, change secure true in login api, setup server port, setup pom for packaging jar